class color .white and .btn changed then contrast color fixed

--- a/style.css
+++ b/style.css
@@ -760,7 +760,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #404040!important;
 }
 
 .portfolio-thumb {
@@ -804,7 +804,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #404040!important;
 }
 
 .btn-atomic-tangerine:hover {
